--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- Make calls to others -->
         <div id="step2">
           <p>Your id: <span id="my-id">...</span></p>
-          <a href="https://naveenshivnani.github.io/slate/" class="pure-button pure-button-success" id="slate">Slate It!</a>
+          <a href="https://naveenshivnani.github.io/slate/" class="pure-button pure-button-success">Slate It!</a>
           <p>Share this id with others so they can call you.</p>
           <h3>Make a call</h3>
           <div class="pure-form">
