--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
         <!-- Make calls to others -->
         <div id="step2">
           <p>Your id: <span id="my-id">...</span></p>
-          <a href="https://naveenshivnani.github.io/slate/" class="pure-button pure-button-primary" target="_blank">Slate It!</a>
+          <a href="https://naveenshivnani.github.io/slate/" data-toggle="tooltip" title="Copy the Id and Slate It!" class="pure-button pure-button-primary" target="_blank">Slate It!</a>
+          <script>
+            $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();
+          });
+</script>
           <p>Share this id with others so they can call you.</p>
           <h3>Make a call</h3>
           <div class="pure-form">
